--- a/src/components/about/section-four/section-four.module.css
+++ b/src/components/about/section-four/section-four.module.css
@@ -37,7 +37,7 @@
 @media only screen and (max-width: 1279px) {
     .root {
         padding-bottom: 0px;
-        padding-top: 800px;
+        padding-top: 390px;
     }
 
     .heading {
