--- a/src/components/about/section-two/section-two.module.css
+++ b/src/components/about/section-two/section-two.module.css
@@ -78,13 +78,13 @@
     }
 
     .heading {
-        font-size: 35px;
+        font-size: 50px;
         line-height: 50px;
         font-weight: bold;
     }
 
     .text {
-        font-size: 15px;
+        font-size: 20px;
     }
 
     .asteroid1 {
